part2/2.2/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: shared-file
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: project
          image: mobporo/project:v1028
          volumeMounts:
          - name: shared-file
            mountPath: /usr/src/app/files
        - name: backend
          image: mobporo/backend:v1028
          # volumeMounts:
          # - name: shared-file
          #   mountPath: /usr/src/app/files
